-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 14, 15
-
Component/s: hotspot
-
b05
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8237424 | 14.0.1 | Unassigned | P3 | Resolved | Fixed | b01 |
| JDK-8236821 | 14 | Zhengyu Gu | P3 | Resolved | Fixed | b32 |
This is not a fatal error. However, it has performance impact and can confuse verifier.
- backported by
-
JDK-8236821 Shenandoah: Disable concurrent class unloading flag if no class unloading for the GC cycle
-
- Resolved
-
-
JDK-8237424 Shenandoah: Disable concurrent class unloading flag if no class unloading for the GC cycle
-
- Resolved
-