8236681: Shenandoah: Disable concurrent class unloading flag if no class unloading for the GC cycle

Reviewed-by: rkennke